--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <body>
   <h1>祝爸爸生日快乐！</h1>
   <img src="http://birthday.best1.top/birthday.gif" alt="动态GIF图像" class="gif-image">
-  <img src="cake.jpg" alt="蛋糕图片" class="cake-image">
+  <img src="http://birthday.best1.top/birthday.jpg" alt="蛋糕图片" class="cake-image">
 
 </body>
 </html>
